--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/edoardocavazza/rollup-plugin-sass-modules#readme",
   "dependencies": {
-    "node-sass": "^4.5.3",
     "resolve": "^1.4.0",
-    "rollup-pluginutils": "^2.0.1"
+    "rollup-pluginutils": "^2.0.1",
+    "sass": "^1.0.0-beta.3"
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
