--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "resolve": "^1.4.0",
     "rollup-pluginutils": "^2.0.1",
-    "sass": "^1.0.0-beta.3"
+    "sass": "^1.3.2"
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
